--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "type": "module",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node src/index.js"
+    "start": "nodemon src/index.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "Saif",
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.1",
@@ -24,6 +24,7 @@
     "mongoose": "^8.2.1",
     "mongoose-aggregate-paginate-v2": "^1.0.7",
     "multer": "^1.4.5-lts.1",
+    "nodemon": "^3.1.0",
     "prettier": "^3.2.5"
   }
 }
